# Hospital-Readmission-Risk-Fairness-Report

hospital-readmission-fairness/: Makefile  README.md  pyproject.toml
hospital-readmission-fairness/data/raw/: readmissions.csv
hospital-readmission-fairness/src/readmission/: cli.py  config.py  fairness.py  features.py  io.py  modeling.py  reporting.py  validation.py
hospital-readmission-fairness/tests/: test_validation.py
